[package]
name = "PactJson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features= ["full"] } # might not need full features, but easier for setup as a PoC
pact_consumer = "1.0.0"
reqwest = { version = "0.11.18", features = ["json"]}
serde_json = "1.0.96"